[project]
name = "blog-generator-agentai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.6",
    "langgraph-cli[inmem]>=0.4.11",
    "uvicorn>=0.40.0",
    "watchdog>=6.0.0",
]
